fixed <aside> any weather from overlaping on form. completed version 1.4

--- a/styles/scss/_main-blog.scss
+++ b/styles/scss/_main-blog.scss
@@ -123,7 +123,7 @@ aside{
     }
 
     aside{
-        top: -100px
+        top: -80px;
     }
 }
 
