--- a/styles/style.css
+++ b/styles/style.css
@@ -1232,7 +1232,7 @@ aside {
     top: -100px;
   }
   aside {
-    top: -100px;
+    top: -80px;
   }
 }
 
